--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://heinkozin:eikaykhine@159.223.54.63:5432/ecommerce"
+DATABASE_URL="postgresql://heinkozin:eikaykhine@:5432/ecommerce"
