--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "prisma-dbml-generator": "^0.8.3",
     "prisma-nestjs-graphql": "^14.6.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
