--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.5",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.10.0",
     "apollo-server-express": "^3.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.3.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "prisma": "^3.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -47,6 +50,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.0",
     "@types/node": "^17.0.21",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
